<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp"
    >

    <EditText
        android:id="@+id/salario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salario_descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/salario_variavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/salario"
        android:text="@string/salario_mensal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/gastos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gastos_descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/salario_variavel"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/gastos_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gastos"
        android:text="@string/gastos_saude_educacao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/dependentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependentes_descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/gastos_descricao"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/dependentes_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dependentes"
        android:text="@string/dependentes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/imposto_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dependentes_descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/imposto_title"
        />
    <EditText
        android:id="@+id/input_imposto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imposto_cifrao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imposto_title"
        />
    <Button
        android:id="@+id/botao_imposto"
        android:onClick="trataClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_imposto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="CALCULAR"
        />
</androidx.constraintlayout.widget.ConstraintLayout>